--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,45 +1,86 @@
 body {
-    background-color: #D5DCF2;
+    background-color: #F2F0F0;
+    font-family:sans-serif
 }
 .main-header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    align-items: center;
-    padding-bottom: 20px;
-    background-color: #D5DCF2;
+    /* align-items: center; */
+    padding-bottom: 25px;
+    /* background-color: #D5DCF2; */
 }
 
 .main-header img {
-    width: 175px;
+    height: 80vh;
+}
+
+nav {
+    position: relative;
 }
 
 nav ul {
     display: flex;
-    justify-content: center;
+    justify-content: left;
+    font-size: 25px;
+    list-style-type: none; 
+    position: absolute;
+    top: -35px;
 }
 
 nav li {
     margin-left: 30px;
     margin-right: 30px;
-    font-size:25pt;
+    
 }
 
 nav li a {
-    font-family: ;
     text-decoration: none;
-    color:#F2A2DD;
+    color:#525936;
 }
 
 .about {
     text-align: center;
     padding-top: 20px;
     padding-bottom: 50px;
-    background-color:#D5DCF2;
+    
+}
+
+.about div {
+    flex-direction: column;
+    display: flex;
+    width: 20%;
+}
+
+#intro {
+    font-size: 500%;
+    text-align: left;
+    color: #525936;
+
+}
+
+#intro2 {
+    font-size: 150%;
+    display: block;
+    width: 300px;
+    text-align: left;
+    color: #525936;
+    justify-content: left;
+}
+
+#intro5 {
+    font-size: 150%;
+    display: block;
+    width: 300px;
+    text-align: left;
+    color: #525936;
+    justify-content: left;
 }
 
 .about h1 {
     font-size: 40pt;
+    color:#525936;
+    padding-bottom: 30px;
 }
 
 .about article {
@@ -54,9 +95,12 @@ nav li a {
     margin: 15px;
 }
 
-.about p {
+#intro3 {
     max-width: 20%;
     text-align: left;
+    padding-left: 30px;
+    color:#525936;
+
 }
 
 .work {
@@ -66,14 +110,15 @@ nav li a {
     padding-top: 20px;
     padding-bottom: 20px;
     justify-content: center;
-    background-color:#D5DCF2;
 }
 
+
 div h1 {
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     font-size: 40pt;
     text-align: center;
-    background-color: #D5DCF2;
+    background-color:#F2F0F0;
+    color:#525936;
 }
 
 #card {
@@ -93,10 +138,11 @@ div h1 {
 
 
 .contact {
+    color:#525936;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 .contact h1 {
