--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,8 +190,36 @@ nav li a {
 }
 
 
-@media screen and (max-width:700px) {
+/* @media screen and (max-width:375px)
+.main-header {
+    width: 400px;
+    heigtht: 160px
+
     
-}`
+} */
+
+/* @media screen and (max-width: 375px) {
+    .main-header img {
+        width: 645px;
+        height: 270px;
+    }
+    nav li {
+        font-size: 1rem;
+        text-align: left;
+        text-decoration: none;
+    }
+
+} */
+
+@media screen and (max-width: 768px) {
+    main-header img {
+        width: 1500px;
+        height: 780px;
+    } .about{
+        font-size: .5rem;
+    }
+
+}
+
 
 
