--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,31 @@
+/* use this color and font family as the background for the page. */
 body {
     background-color: #F2F0F0;
     font-family:sans-serif
 }
+
+/*  Set header to flex. Align items to center vertically. Center text & add padding 
+to the bottem of the About header se make more space btwn the title and information.
+*/
 .main-header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    /* align-items: center; */
     padding-bottom: 25px;
-   
 }
 
+/* Sizing of the floral banner */
 .main-header img {
     height: 80vh;
-    /* object-fit: fill;
-    width: 100vw !important; */
 }
 
+/* Position the nav relative to the header */
 nav {
     position: relative;
 }
 
+/* Nav bar links positioned in a row to the left. -35 px to position links in the 
+banner picture */
 nav ul {
     display: flex;
     justify-content: left;
@@ -30,17 +35,18 @@ nav ul {
     top: -35px;
 }
 
+/* added a 30pm margin to the nav links */
 nav li {
     margin-left: 30px;
     margin-right: 30px;
-    
 }
 
+/* used anchors to set direct links to my nav bar. Set the text color  */
 nav li a {
     text-decoration: none;
     color:#525936;
 }
-
+/* Centered text, used padding for extra space in this section */
 .about {
     text-align: center;
     padding-top: 150px;
@@ -48,20 +54,28 @@ nav li a {
     
 }
 
+/* title */
+.about h1 {
+    font-size: 40pt;
+    color:#525936;
+    padding-bottom: 30px;
+    
+}
+/*  Set div to flex display content vertically and give setion a 20% width */
 .about div {
     flex-direction: column;
     display: flex;
     width: 20%;
 }
 
+/* set greeting div 'hello' to be significantly larger */
 #intro {
     font-size: 550%;
     text-align: center;
     color: #525936;
-    
 }
 
-
+/* this intro div is my first and last name and justifyed the content to the left. */
 #intro2 {
     font-size: 250%;
     display: flex;
@@ -69,41 +83,31 @@ nav li a {
     text-align: center;
     color: #525936;
     justify-content: left;
-    
 }
 
+/* this intro div is to describe who I am. Had to ceate many divs to make the content flex and appear to have 3 columns */
 #intro3 {
     width: 100%;
     text-align: center;
-    /* padding-left: 30px; */
     color:#525936;
     display: flex;
     margin: 40px;
 }
 
-.about h1 {
-    font-size: 40pt;
-    color:#525936;
-    padding-bottom: 30px;
-    
-}
-
+/* Flex the article tag in the main section. align items and content to center.  */
 .about article {
     display: flex;
     align-items: center;
     justify-content: center;
 
 }
-
+/* Added margin to my personal image */
 .about article img {
     height: 50vh;
     margin: 10px;
-    /* padding-left: 10px; */
-    /* padding-right: 60px; */
-    
-    
 }
 
+/* Preferences for the work section. Note background color change */
 .work {
     display: flex;
     flex-direction:row;
@@ -114,7 +118,7 @@ nav li a {
     background-color: #E5E4E0;
 }
 
-
+/* 'Work' title preferences  */
 .headingWork {
     padding-top: 50px;
     padding-bottom: 10px;
@@ -123,13 +127,13 @@ nav li a {
     background-color: #E5E4E0;
     color:#525936;
 }
-
+/* preference for the 4 boxes */
 #card {
     min-height: 500px;
     border: 2px solid #515931 ;
 }
 
-
+/* prefrences for the one large box */
 .box figure {
     width: 27vw;
     height: 303.5px;
@@ -139,7 +143,7 @@ nav li a {
     padding-top: 50px;
 }
 
-
+/* preferences for the entire contact section */
 .contact {
     color:#525936;
     display: flex;
@@ -148,7 +152,7 @@ nav li a {
     padding-bottom: 100px;
 }
 
-
+/* Heading */
 .headingContact {
     padding-bottom: 50px;
     font-size: 40pt;
@@ -157,6 +161,7 @@ nav li a {
     color:#525936;
 }
 
+/* flex unordered list */
 .contact ul {
     display: flex;
 }
@@ -172,18 +177,20 @@ nav li a {
     padding-left: 14px;
 }
 
+/* class for the icons */
 .icon {
     width: 60px;
     height: 60px;
     
 }
-
+/* class for the linkedin, Twitter and Phone */
 .icon img{
     object-fit: contain;
     width:100%;
     height: 100%;
 }
 
+/* because the github image did not have white around the icon, needed to set new width and height. */
 #github {
     width: 32px;
     height:32px;
@@ -195,6 +202,7 @@ nav li a {
     height: 100%;
 }
 
+/* footer settings */
 .text-center {
     justify-content: center;
     text-align: center;
@@ -202,6 +210,9 @@ nav li a {
     padding-top: 100px;
     background-color: #E5E4E0;;
 }
+
+
+
 
 
 /* @media screen and (max-width:375px)
