--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,10 +127,26 @@ nav li a {
     background-color: #E5E4E0;
     color:#525936;
 }
+
+#mainImg {
+    height: 600px;
+    width: 600px;
+}
+
 /* preference for the 4 boxes */
 #card {
     min-height: 500px;
     border: 2px solid #515931 ;
+}
+
+.card {
+    padding-top: 0px !important;
+}
+
+.card img {
+    width: 100%;
+    /* height: 100%; */
+
 }
 
 /* prefrences for the one large box */
