--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ to the bottem of the About header se make more space btwn the title and informat
 
 /* Sizing of the floral banner */
 .main-header img {
-    height: 80vh;
+    height: 40vh;
 }
 
 /* Position the nav relative to the header */
@@ -49,7 +49,7 @@ nav li a {
 /* Centered text, used padding for extra space in this section */
 .about {
     text-align: center;
-    padding-top: 150px;
+    padding-top: 70px;
     padding-bottom: 70px;
     
 }
@@ -70,8 +70,8 @@ nav li a {
 
 /* set greeting div 'hello' to be significantly larger */
 #intro {
-    font-size: 550%;
-    text-align: center;
+    font-size: 700%;
+    text-align: left;
     color: #525936;
 }
 
@@ -80,9 +80,10 @@ nav li a {
     font-size: 250%;
     display: flex;
     width: 500px;
-    text-align: center;
+    text-align: left;
     color: #525936;
     justify-content: left;
+
 }
 
 /* this intro div is to describe who I am. Had to ceate many divs to make the content flex and appear to have 3 columns */
@@ -104,7 +105,8 @@ nav li a {
 /* Added margin to my personal image */
 .about article img {
     height: 50vh;
-    margin: 10px;
+    /* margin: 10px; */
+    margin-left: 40px;
 }
 
 /* Preferences for the work section. Note background color change */
@@ -112,7 +114,7 @@ nav li a {
     display: flex;
     flex-direction:row;
     align-items: center;
-    padding-top: 100px;
+    padding-top: 30px;
     padding-bottom: 100px;
     justify-content: center;
     background-color: #E5E4E0;
@@ -120,7 +122,7 @@ nav li a {
 
 /* 'Work' title preferences  */
 .headingWork {
-    padding-top: 50px;
+    padding-top: 100px;
     padding-bottom: 10px;
     font-size: 40pt;
     text-align: center;
@@ -164,15 +166,15 @@ nav li a {
     color:#525936;
     display: flex;
     justify-content: center;
-    padding-top: 65px;
+    padding-top: 30px;
     padding-bottom: 100px;
 }
 
 /* Heading */
 .headingContact {
-    padding-bottom: 50px;
+    padding-bottom: 10px;
     font-size: 40pt;
-    padding-top: 50px;
+    padding-top: 100px;
     text-align: center;
     color:#525936;
 }
