--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,55 +228,88 @@ nav li a {
 }
 
 
-
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
+@media (max-width: 576px) {
     .main-header img {
-        width: 125vw !important; 
+        width:100%;
+        height: 20vh;
     } 
-    nav li {
-    font-size: 12pt;
-    margin-left: 15px;
-    margin-right: 15px;
+nav li {
+    font-size: 10pt;
+    margin-left: 7px;
+    margin-right: 7px;
 }
 #projected {
     flex-direction: row !important;
-    width: 630vw !important;
-    
+    width: 630vw !important;   
 }
 .about {
     text-align: center;
     padding-top: 30px;
-    padding-bottom: 30px;
-    
+    padding-bottom: 30px; 
 }
 #intro {
-    font-size: 25pt;
-    text-align: left;
-    margin-right: 50px;
-   
+    font-size: 250%;
+    /* justify-content: center; */
+    /* text-align: center; */
+    color: #525936;
 }
 #intro2 {
-    font-size: 15pt;
-    text-align: left;
-    justify-content: left;
-    margin-right: 50px;
+    font-size: 100%;
+    display: flex;
+    /* width: 500px; */
+    /* text-align: center; */
+    color: #525936;
+    /* justify-content: center; */
+
 }
 #intro3 {
-    text-align: center;
-} 
+    width: 100%;
+    /* text-align: center; */
+    color:#525936;
+    display: flex;
+    margin: 40px;
+   
+}
 .about article {
+    display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 .about article img {
     height: 30vh;
-    margin-left: 30px;
-    padding-left: 100px;
-
+    /* margin-left: 30px;
+    padding-left: 100px; */
+} 
+#mainImg {
+    width: 100%;
+}
+/* preference for the 4 boxes */
+#card {
+    min-height: 500px;
+    border: 2px solid #515931 ;
 }
 
+.card {
+    /* padding-top: 0px !important; */
+    
+}
 
+.card img {
+    width: 100%;
+    height: 100%;
+}
 
+/* prefrences for the one large box */
+.box figure {
+    width: 10vw;
+    /* height: 20px; */
+    border: 2px solid black ;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    padding-top: 50px;
+    flex-direction: row !important;
+}
 
-
+}
