--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,65 +108,76 @@ nav li a {
     margin-left: 40px;
 }
 
-/* Preferences for the work section. Note background color change */
-.work {
+/* Work */
+.pageSection {
     display: flex;
-    flex-direction:row;
-    align-items: center;
-    padding-top: 30px;
-    padding-bottom: 100px;
-    justify-content: center;
-    background-color: #E5E4E0;
-}
-
-/* 'Work' title preferences  */
-.headingWork {
-    padding-top: 100px;
-    padding-bottom: 10px;
-    font-size: 40pt;
-    text-align: center;
-    background-color: #E5E4E0;
-    color:#525936;
-}
-
-#mainImg {
-    height: 600px;
-    width: 600px;
-}
-
-/* preference for the 4 boxes */
-#card {
-    min-height: 500px;
-    border: 2px solid #515931 ;
-}
-
-.card {
-    padding-top: 0px !important;
-}
-
-.card img {
-    width: 100%;
-    /* height: 100%; */
-}
-
-/* prefrences for the one large box */
-.box figure {
-    width: 27vw;
-    height: 303.5px;
-    border: 2px solid black ;
-    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
     justify-content: space-between;
-    padding-top: 50px;
 }
 
-/* preferences for the entire contact section */
-.contact {
-    color:#525936;
-    display: flex;
-    justify-content: center;
-    padding-top: 30px;
-    padding-bottom: 100px;
+.pageSection > h2 {
+    flex: 0 0 20%;
+    text-align: right;
+    font-size: 4vh;
+    line-height: 1.1;
 }
+
+.pageSection > div {
+    flex: 0 0 77%;
+    width: 100%;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+.flex-second {
+    display:flex;
+    flex-wrap: wrap;
+}
+
+.flex-item {
+    display: flex;
+    align-items: flex-end; 
+    /* flex-basis: calc(50%-1em);  */
+    /* min-height: 150px; */
+    /* max-height: 150px;  */
+    border: 2px solid black;  
+}
+
+.flex-item:first-child {
+    min-height: 400px;
+    margin-right: 950px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Preferences for the work section. Note background color change */
 
 /* Heading */
 .headingContact {
@@ -231,7 +242,7 @@ nav li a {
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
     .main-header img {
-        width:100%;
+        /* width:100%; */
         height: 20vh;
     } 
 nav li {
@@ -241,7 +252,7 @@ nav li {
 }
 #projected {
     flex-direction: row !important;
-    width: 630vw !important;   
+    /* width: 630vw !important;    */
 }
 .about {
     text-align: center;
@@ -264,7 +275,7 @@ nav li {
 
 }
 #intro3 {
-    width: 100%;
+    /* width: 100%; */
     /* text-align: center; */
     color:#525936;
     display: flex;
@@ -287,12 +298,15 @@ nav li {
 }
 /* preference for the 4 boxes */
 #card {
-    min-height: 500px;
+    /* min-height: 500px; */
     border: 2px solid #515931 ;
+    width: 100%;
 }
 
 .card {
-    /* padding-top: 0px !important; */
+    min-height: 250px;
+    width: 100%;
+
     
 }
 
@@ -303,13 +317,17 @@ nav li {
 
 /* prefrences for the one large box */
 .box figure {
-    width: 10vw;
-    /* height: 20px; */
+    /* width: 100%; */
+    /* height: 100%; */
     border: 2px solid black ;
     /* display: flex; */
     /* justify-content: space-between; */
     padding-top: 50px;
-    flex-direction: row !important;
+    flex-direction: column !important;
+}
+#work {
+    flex-direction: column;
+    width: 100%;
+}
 }
 
-}
