insert new icons, adjust sizes on the rest of the pictures and re-style.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,7 @@ body {
     font-family:sans-serif
 }
 
-/*  Set header to flex. Align items to center vertically. Center text & add padding 
-to the bottem of the About header se make more space btwn the title and information.
-*/
+
 .main-header {
     display: flex;
     flex-direction: column;
@@ -47,65 +45,35 @@ nav li a {
     color:#525936;
 }
 
-/* Centered text, used padding for extra space in this section */
+/* About Me */ 
 .about {
-    text-align: center;
-    padding-top: 70px;
-    padding-bottom: 70px;
-}
-
-/* title */
-.about h1 {
-    font-size: 40pt;
-    color:#525936;
-    padding-bottom: 30px;
-}
-
-/*  Set div to flex display content vertically and give setion a 20% width */
-.about div {
-    flex-direction: column;
     display: flex;
-    width: 20%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    color: #525936;
 }
-
-/* set greeting div 'hello' to be significantly larger */
+.about > h1 {
+    flex: 0 0 20%;
+    text-align: left;
+    font-size: 6vh;
+    line-height: 1.1; 
+    margin-left: 50px;
+    color: #525936;
+}
+.intro {
+    font-size: 30pt;
+}
 #intro {
-    font-size: 700%;
+    font-size: 18pt;
     text-align: left;
     color: #525936;
-}
-
-/* this intro div is my first and last name and justifyed the content to the left. */
-#intro2 {
-    font-size: 250%;
-    display: flex;
-    width: 500px;
-    text-align: left;
-    color: #525936;
-    justify-content: left;
-}
-
-/* this intro div is to describe who I am. Had to ceate many divs to make the content flex and appear to have 3 columns */
-#intro3 {
-    width: 100%;
+    line-height: 2;
     text-align: center;
-    color:#525936;
-    display: flex;
-    margin: 40px;
 }
-
-/* Flex the article tag in the main section. align items and content to center.  */
-.about article {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-/* Added margin to my personal image */
-.about article img {
-    height: 50vh;
-    /* margin: 10px; */
-    margin-left: 40px;
+.about img {
+    height: 70vh;
+    padding-bottom: 175px;
+    margin-right: 70px;
 }
 
 /* Work */
@@ -114,97 +82,83 @@ nav li a {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: stretch;
-    justify-content: space-between;
+    justify-content: space-between; 
+    text-align: center;
 }
+
+.pageSection > h1 {
+    flex: 0 0 20%;
+    text-align: left;
+    font-size: 6vh;
+    line-height: 1.1; 
+    margin-left: 50px;
+    color: #525936;
+} 
 
 .pageSection > h2 {
     flex: 0 0 20%;
-    text-align: right;
-    font-size: 4vh;
-    line-height: 1.1;
-}
+    text-align: center;
+    font-size: 6vh;
+    line-height: 1.1; 
+    
+    color: #525936;
+} 
 
 .pageSection > div {
     flex: 0 0 77%;
     width: 100%;
 }
 
-.flex-container {
+.first-flex {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
 }
 
-.flex-second {
-    display:flex;
-    flex-wrap: wrap;
-}
-
-.flex-item {
+.second-flex {
     display: flex;
-    align-items: flex-end; 
-    /* flex-basis: calc(50%-1em);  */
-    /* min-height: 150px; */
-    /* max-height: 150px;  */
-    border: 2px solid black;  
 }
 
-.flex-item:first-child {
-    min-height: 400px;
-    margin-right: 950px;
+.third-flex {
+    display: flex;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Preferences for the work section. Note background color change */
-
-/* Heading */
+/* Contact */
 .headingContact {
-    padding-bottom: 10px;
-    font-size: 40pt;
-    padding-top: 100px;
-    text-align: center;
-    color:#525936;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    color: #525936;
+    align-items: center;
+    
+}
+
+/* title */
+.headingContact > h1 {
+    flex: 0 0 20%;
+    text-align: left;
+    font-size: 6vh;
+    line-height: 1.1; 
+    margin-left: 50px;
+    color: #525936;
+    margin-top: 175px;
 }
 
 /* flex unordered list */
 .contact ul {
     display: flex;
+    align-items: center;
 }
 
 .contact ul li {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 400px;
+    padding-top: 175px;
+    /* margin-right: 70px; */
+    align-items: center;
+    justify-content: center;
 }
 
-.contact ul li:first-of-type {
-    padding-top: 14px;
-    padding-right: 14px;
-    padding-left: 14px;
-}
 
-/* class for the icons */
+
+
 .icon {
     width: 60px;
     height: 60px;
@@ -213,21 +167,11 @@ nav li a {
 /* class for the linkedin, Twitter and Phone */
 .icon img{
     object-fit: contain;
-    width:100%;
-    height: 100%;
+    width:75%;
+    height: 75%;
+
 }
 
-/* because the github image did not have white around the icon, needed to set new width and height. */
-#github {
-    width: 32px;
-    height:32px;
-}
-
-#github img {
-    object-fit: contain;
-    width:100%;
-    height: 100%;
-}
 
 /* footer settings */
 .text-center {
@@ -237,6 +181,27 @@ nav li a {
     padding-top: 100px;
     background-color: #E5E4E0;;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Small devices (landscape phones, 576px and up) */
@@ -329,5 +294,6 @@ nav li {
     flex-direction: column;
     width: 100%;
 }
+
 }
 
