--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,25 +5,19 @@ body {
 }
 
 
+
 .main-header {
     display: flex;
     flex-direction: column;
     text-align: center;
     padding-bottom: 25px;
 }
-
-/* Sizing of the floral banner */
 .main-header img {
     height: 40vh;
 }
-
-/* Position the nav relative to the header */
 nav {
     position: relative;
 }
-
-/* Nav bar links positioned in a row to the left. -35 px to position links in the 
-banner picture */
 nav ul {
     display: flex;
     justify-content: left;
@@ -32,18 +26,16 @@ nav ul {
     position: absolute;
     top: -35px;
 }
-
-/* added a 30pm margin to the nav links */
 nav li {
     margin-left: 30px;
     margin-right: 30px;
 }
-
-/* used anchors to set direct links to my nav bar. Set the text color  */
 nav li a {
     text-decoration: none;
     color:#525936;
 }
+
+
 
 /* About Me */ 
 .about {
@@ -76,6 +68,8 @@ nav li a {
     margin-right: 70px;
 }
 
+
+
 /* Work */
 .pageSection {
     display: flex;
@@ -85,7 +79,6 @@ nav li a {
     justify-content: space-between; 
     text-align: center;
 }
-
 .pageSection > h1 {
     flex: 0 0 20%;
     text-align: left;
@@ -94,7 +87,6 @@ nav li a {
     margin-left: 50px;
     color: #525936;
 } 
-
 .pageSection > h2 {
     flex: 0 0 20%;
     text-align: center;
@@ -103,23 +95,21 @@ nav li a {
     
     color: #525936;
 } 
-
 .pageSection > div {
     flex: 0 0 77%;
     width: 100%;
 }
-
 .first-flex {
     display: flex;
 }
-
 .second-flex {
     display: flex;
 }
-
 .third-flex {
     display: flex;
 }
+
+
 
 /* Contact */
 .headingContact {
@@ -130,8 +120,6 @@ nav li a {
     align-items: center;
     
 }
-
-/* title */
 .headingContact > h1 {
     flex: 0 0 20%;
     text-align: left;
@@ -141,30 +129,21 @@ nav li a {
     color: #525936;
     margin-top: 175px;
 }
-
-/* flex unordered list */
 .contact ul {
     display: flex;
     align-items: center;
 }
-
 .contact ul li {
     margin-left: 400px;
     padding-top: 175px;
-    /* margin-right: 70px; */
     align-items: center;
     justify-content: center;
 }
-
-
-
-
 .icon {
     width: 60px;
     height: 60px;
     
 }
-/* class for the linkedin, Twitter and Phone */
 .icon img{
     object-fit: contain;
     width:75%;
@@ -183,117 +162,91 @@ nav li a {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Small devices (landscape phones, 576px and up) */
-@media (max-width: 576px) {
+/* @media (min-width: 576px) {
     .main-header img {
-        /* width:100%; */
         height: 20vh;
+        justify-content: center;
     } 
-nav li {
-    font-size: 10pt;
-    margin-left: 7px;
-    margin-right: 7px;
-}
-#projected {
-    flex-direction: row !important;
-    /* width: 630vw !important;    */
-}
-.about {
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px; 
-}
-#intro {
-    font-size: 250%;
-    /* justify-content: center; */
-    /* text-align: center; */
-    color: #525936;
-}
-#intro2 {
-    font-size: 100%;
-    display: flex;
-    /* width: 500px; */
-    /* text-align: center; */
-    color: #525936;
-    /* justify-content: center; */
 
-}
-#intro3 {
-    /* width: 100%; */
-    /* text-align: center; */
-    color:#525936;
-    display: flex;
-    margin: 40px;
-   
-}
-.about article {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-.about article img {
-    height: 30vh;
-    /* margin-left: 30px;
-    padding-left: 100px; */
-} 
-#mainImg {
-    width: 100%;
-}
-/* preference for the 4 boxes */
-#card {
-    /* min-height: 500px; */
-    border: 2px solid #515931 ;
-    width: 100%;
-}
+    .pageSection {
+        /* display: flex; 
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: stretch;
+        justify-content: center; 
+        text-align: center;
+    }
 
-.card {
-    min-height: 250px;
-    width: 100%;
+    .about {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        color: #525936;
+    }
+    .about > h1 {
+        flex-direction: column;
+        flex-wrap: wrap;
+        display: flex;
+        text-align: center;
+        font-size: 4vh;
+        
+        color: #525936;
+    }
+    .intro {
+        font-size: 30pt;
+        justify-content: center;
+        text-align: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    #intro {
+        font-size: 18pt;
+        text-align: center;
+        color: #525936;
+        line-height: 2;
+        text-align: center;
+    }
+    .about img {
+        height: 45vh;
+        margin-top: 10vh;
+    }
 
-    
-}
+    .first-flex {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .second-flex {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .third-flex {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 
-.card img {
-    width: 100%;
-    height: 100%;
-}
+    .headingContact {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        color: #525936;
+        
+        
+    }
+    .contact ul li {
+        margin-left: 400px;
+        padding-top: 175px;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        display: flex;
+    } 
 
-/* prefrences for the one large box */
-.box figure {
-    /* width: 100%; */
-    /* height: 100%; */
-    border: 2px solid black ;
-    /* display: flex; */
-    /* justify-content: space-between; */
-    padding-top: 50px;
-    flex-direction: column !important;
-}
-#work {
-    flex-direction: column;
-    width: 100%;
-}
-
-}
 
